--- a/app/src/main/res/layout/activity_view_answer.xml
+++ b/app/src/main/res/layout/activity_view_answer.xml
@@ -6,58 +6,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewAnswerActivity"
-    android:paddingLeft="40dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/view_answer_date"
-        android:layout_marginTop="50dp"
-        android:fontFamily="@font/dovemayo"
-        android:textSize="30dp"
-        android:text="날짜"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/view_answer_question"
-        android:layout_below="@+id/view_answer_date"
-        android:fontFamily="@font/dovemayo"
-        android:layout_marginTop="10dp"
-        android:textSize="30dp"
-        android:text="카테고리/질문"/>
-
-    <EditText
-        android:layout_width="330dp"
-        android:layout_height="350dp"
-        android:id="@+id/view_answer_answer"
-        android:layout_below="@+id/view_answer_question"
-        android:layout_marginTop="10dp"
-        android:fontFamily="@font/dovemayo"
-        android:textSize="30dp"
-        android:hint="답변"
-        android:background="@color/very_light"
-        android:textAlignment="center"/>
-
+    android:gravity="center"
+    >
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="40dp"
-        android:layout_below="@+id/view_answer_answer"
-        android:layout_centerHorizontal="true">
+        android:orientation="vertical"
+        android:layout_marginTop="15dp">
 
-        <Button
-            android:layout_width="110dp"
-            android:layout_height="60dp"
-            android:id="@+id/view_answer_toindex"
-            android:layout_below="@+id/view_answer_answer"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/view_answer_question"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
+            android:gravity="center_vertical|center_horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/view_answer_date"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="20dp"
+                android:gravity="left"
+                android:layout_weight="1"
+                android:textStyle="bold"
+                android:text="날짜"/>
+
+
+            <TextView
+                android:id="@+id/view_answer_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/dovemayo"
+                android:gravity="right"
+                android:layout_weight="1"
+                android:text="카테고리"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+
+        <TextView
+            android:layout_width="330dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/view_answer_question"
             android:fontFamily="@font/dovemayo"
-            android:textSize="30dp"
-            android:backgroundTint="@color/dark"
-            android:text="목록"
-            android:textStyle="bold"/>
+            android:layout_marginTop="10dp"
+            android:textSize="24dp"
+            android:textStyle="bold"
+            android:text="질문"/>
 
+        <TextView
+            android:layout_width="330dp"
+            android:layout_height="350dp"
+            android:id="@+id/view_answer_answer"
+            android:layout_below="@+id/view_answer_question"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/dovemayo"
+            android:padding="15dp"
+            android:textSize="30dp"
+            android:background="@color/very_light"
+            android:textAlignment="center"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center"
+            android:layout_below="@+id/view_answer_answer"
+            >
+
+            <Button
+                android:layout_width="110dp"
+                android:layout_height="60dp"
+                android:id="@+id/view_answer_toindex"
+                android:fontFamily="@font/dovemayo"
+                android:textSize="30dp"
+                android:backgroundTint="@color/dark"
+                android:text="목록"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
     </LinearLayout>
+
 
 </RelativeLayout>
