--- a/app/src/main/res/layout/question_list_wrapper.xml
+++ b/app/src/main/res/layout/question_list_wrapper.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/question_wrapper_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/index_box">
 
     <TextView
         android:id="@+id/question_wrapper_date"
