--- a/app/src/main/res/layout/activity_category_setting.xml
+++ b/app/src/main/res/layout/activity_category_setting.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="#ffffff">
+    android:layout_height="match_parent">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="#ffffff">
 
     <TextView
         android:layout_width="match_parent"
@@ -252,4 +256,5 @@
         android:layout_gravity="center"
         android:textColor="#ffffff" />
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
