--- a/app/src/main/res/layout/question_list_wrapper.xml
+++ b/app/src/main/res/layout/question_list_wrapper.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
-    android:background="@drawable/index_box">
+    android:background="@drawable/answer_background"
+    android:layout_margin="8dp">
 
     <TextView
         android:id="@+id/question_wrapper_date"
@@ -44,7 +45,7 @@
         android:maxLines="1"
         android:ellipsize="end"
         android:text="내용"
-        android:textSize="25sp"
+        android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
