--- a/app/src/main/res/layout/activity_question_index.xml
+++ b/app/src/main/res/layout/activity_question_index.xml
@@ -24,7 +24,8 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/light"
+            android:id="@+id/question_index_setting_btn"
+            android:src="@drawable/setting_light"
             android:layout_alignParentRight="true"/>
 
         <androidx.recyclerview.widget.RecyclerView
